--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- Icon -->
     <link rel="shortcut icon" href="img/logo_new_progress.png" />
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Title -->
     <title>PROGRESS</title>
 </head>
@@ -107,7 +109,7 @@
     <!-- Home End -->
 
     <!-- News Start -->
-    <section id="news" class="section-padding">
+    <section id="news" class="section-padding" >
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -116,7 +118,7 @@
             </div>
             <div class="row">
                 <div class="col w-100 d-flex align-items-center justify-content-center my-5">
-                    <div class="img-news">
+                    <div class="img-news " >
                         <img src="img/1.jpg" alt="" class="img-fluid" />
                         <p class="mt-3 mx-3">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
@@ -158,7 +160,7 @@
                     <h1 class="text-center h-head">Event</h1>
                 </div>
             </div>
-            <div class="row">
+            <div class="row"  >
                 <div class="col w-100 d-flex justify-content-center align-content-center my-5">
                     <div class="border-event">
                         <div class="img-event">
@@ -219,7 +221,7 @@
     <section id="contact" class="section-padding">
         <div class="container  w-100 d-flex align-items-center justify-content-center">
             <div class="row">
-                <div class="col mb-sm-5">
+                <div class="col">
                     <div class="form-contact">
                         <form action="" method="get">
                             <div class=" pt-4 mb-3 px-5 ">
