--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Open+Sans:wght@300;400&display=swap"
         rel="stylesheet">
+        
     <!-- Box Icon -->
     <link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css" />
+
     <!-- Icon -->
     <link rel="shortcut icon" href="img/logo_new_progress.png" />
+
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- Title -->
     <title>PROGRESS</title>
 </head>
@@ -31,6 +38,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container container-headfoot">
             <a class="navbar-brand fw-bold fs-2 w-25" href="index.html">
+                <img src="img/logostikom.png" class="logo" alt="">
                 <img src="img/logo_new_progress.png" class="logo" alt="" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -46,7 +54,7 @@
                         <a class="nav-link mx-3" href="class.html">Class</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="about.html">About Us</a>
+                        <a class="nav-link mx-3" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-3" href="#contact">Contact</a>
@@ -81,10 +89,9 @@
                             color: #ffffff;
                         ">
                     <h1>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate
-                        libero et velit interdum, ac aliquet odio mattis. Class aptent taciti
-                        sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                        Curabitur tempus urna at turpis condimentum lobortis.
+                        Kalian sudah tau belum UKM Progress itu apa? <br>
+                        UKM PROGRESS adalah salah satu Unit Kegiatan Mahasiswa yang menjadi wadah bagi kumpulan
+                        mahasiswa ITB STIKOM Bali yang memiliki minat dan ingin belajar di bidang programming.
                     </h1>
                 </div>
             </div>
@@ -99,7 +106,7 @@
                                     border-radius: 35px;
                                     border: none;
                                 ">
-                            Pelajari Lebih Lanjut
+                            Ketahui Lebih Lanjut
                         </button>
                     </a>
                 </div>
@@ -109,23 +116,23 @@
     <!-- Home End -->
 
     <!-- News Start -->
-    <section id="news" class="section-padding" >
+    <section id="news" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="text-center h-head">Berita Terbaru</h1>
+                    <h1 class="text-center h-head">Berita Terkait Proggress</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col w-100 d-flex align-items-center justify-content-center my-5">
-                    <div class="img-news " >
-                        <img src="img/1.jpg" alt="" class="img-fluid" />
-                        <p class="mt-3 mx-3">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                            vulputate libero et velit interdum, ac aliquet odio mattis. Class
-                            aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                            inceptos himenaeos. Curabitur tempus urna at turpis condimentum
-                            lobortis. Ut commodo efficitur neque.
+                    <div class="img-news ">
+                        <img src="img/berita1.jpg" alt="" class="img-fluid" />
+                        <p class="mt-3 mx-3" style="text-align: justify;">
+                            <b>Denpasar</b> – Senin (16-04-2018) siang telah berlangsungnya acara Roadshow Launching #2 Developer
+                            Student Clubs (DSC) Bali yang diselengarakan oleh Unit Kegiatan Mahasiswa (UKM) Progress di
+                            Aula STMIK STIKOM Bali, Renon, Denpasar. Sedikitya 60 mahasiswa mengikuti acara ini dari
+                            target 80 mahasiswa.
+                            Ketua panitia I Putu....
                         </p>
                         <a href="" class="mx-3">
                             <button class="btn">Read More...</button>
@@ -134,13 +141,12 @@
                 </div>
                 <div class="col w-100 d-flex align-items-center justify-content-center my-5">
                     <div class="img-news">
-                        <img src="img/2.jpg" alt="" class="img-fluid" />
-                        <p class="mt-3 mx-3">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                            vulputate libero et velit interdum, ac aliquet odio mattis. Class
-                            aptent taciti sociosqu ad litora torquent per conubia nostra, per
-                            inceptos himenaeos. Curabitur tempus urna at turpis condimentum
-                            lobortis. Ut commodo efficitur neque.
+                        <img src="img/berita2.jpg" alt="" class="img-fluid" />
+                        <p class="mt-3 mx-3" style="text-align: justify;">
+                            <b>Denpasar</b> – Unit Kegiatan Mahasiswa Programmers of STIKOM Bali atau bisa disebut UKM PROGRESS
+                            mengadakan pengabdian masyarakat di SMPN 2 Gerokgak, Desa Sumberkima, Kecamatan Gerokgak,
+                            Kabupaten Buleleng, Selasa (24/05/2016). Kegiatan pengabdian masyarakat yang bertemakan
+                            “Semangat....
                         </p>
                         <a href="" class="mx-3">
                             <button class="btn">Read More...</button>
@@ -156,38 +162,20 @@
     <section id="event" class="section-padding">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div data-aos="zoom-out" class="col">
                     <h1 class="text-center h-head">Event</h1>
                 </div>
             </div>
-            <div class="row"  >
-                <div class="col w-100 d-flex justify-content-center align-content-center my-5">
+            <div class="row">
+                <div data-aos="fade-right" class="col w-100 d-flex justify-content-center align-content-center my-5">
                     <div class="border-event">
                         <div class="img-event">
                             <img src="img/1.jpg" alt="" class="img-fluid" />
-                            <p class="mt-3 mx-3">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                vulputate libero et velit interdum, ac aliquet odio mattis.
-                                Class aptent taciti sociosqu ad litora torquent per conubia
-                                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
-                                condimentum lobortis. Ut commodo efficitur neque. <br>
-                                <a href="" class="">
-                                    <button class="btn">Read More...</button>
-                                </a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col w-100 d-flex justify-content-center align-content-center my-5">
-                    <div class="border-event">
-                        <div class="img-event">
-                            <img src="img/1.jpg" alt="" class="img-fluid" />
-                            <p class="mt-3 mx-3">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                vulputate libero et velit interdum, ac aliquet odio mattis.
-                                Class aptent taciti sociosqu ad litora torquent per conubia
-                                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
-                                condimentum lobortis. Ut commodo efficitur neque.
+                            <p class="mt-3 mx-3" style="text-align: justify;">
+                                Infinity - merupakan kegiatan event tahunan yang diadakan oleh UKM PROGRESS berskala
+                                nasional dengan tujuan untuk mengembangkan kreativitas dan solidaritas masyarakat
+                                khususnya bidang IT, dengan mengadakan event pada bidang akademik dan lomba e-sport,
+                                serta seminar umum nasional.
                             </p>
                             <a href="" class="mx-3">
                                 <button class="btn">Read More...</button>
@@ -195,16 +183,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="col w-100 d-flex justify-content-center align-content-center my-5">
+                <div data-aos="fade" class="col w-100 d-flex justify-content-center align-content-center my-5">
                     <div class="border-event">
                         <div class="img-event">
                             <img src="img/1.jpg" alt="" class="img-fluid" />
-                            <p class="mt-3 mx-3">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-                                vulputate libero et velit interdum, ac aliquet odio mattis.
-                                Class aptent taciti sociosqu ad litora torquent per conubia
-                                nostra, per inceptos himenaeos. Curabitur tempus urna at turpis
-                                condimentum lobortis. Ut commodo efficitur neque.
+                            <p class="mt-3 mx-3" style="text-align: justify;">
+                                StikomFest - merupakan singkatan dari STIKOM Bali Online Festival yang diadakan untuk
+                                pengganti satu sertifikat wajib, kecuali GMTI
+                                STIKOM Bali Online Festival terdiri dari tiga kegiatan yaitu lomba, webinar, dan charity
+                                sebagai pengganti sertifikat wajib peserta dapat memilih mengikuti lomba atau webinar.
+                            </p>
+                            <a href="" class="mx-3">
+                                <button class="btn">Read More...</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-left" class="col w-100 d-flex justify-content-center align-content-center my-5">
+                    <div class="border-event">
+                        <div class="img-event">
+                            <img src="img/1.jpg" alt="" class="img-fluid" />
+                            <p class="mt-3 mx-3" style="text-align: justify;">
+                                Gacoan - singkatan dari
+                                "GABUT CODING CUAN". Gacoan ini merupakan sebuah kompetisi desain web sederhana yang di
+                                adakan oleh kelas web developer pada UKM Progress. GACOAN dilaksanakan setiap 2 bulan
+                                atau 4x pertemuan pada kelas Web Developer. Dan wajib semua anggota mengikuti
+                                kompetisi.
                             </p>
                             <a href="" class="mx-3">
                                 <button class="btn">Read More...</button>
@@ -230,11 +234,13 @@
                             </div>
                             <div class="mb-3 px-5 ">
                                 <label class="form-label" for="emailAddress">Email Address</label>
-                                <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" />
+                                <input class="form-control" id="emailAddress" type="email"
+                                    placeholder="Email Address" />
                             </div>
                             <div class="mb-3 px-5">
                                 <label class="form-label" for="programstudi">Program Studi</label>
-                                <input class="form-control" id="programstudi" type="program" placeholder="Program Studi" />
+                                <input class="form-control" id="programstudi" type="program"
+                                    placeholder="Program Studi" />
                             </div>
                             <div class="pb-4 mb-3 px-5">
                                 <label class="form-label" for="message">Message</label>
@@ -250,8 +256,8 @@
                 <div class="col">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.192459501125!2d115.22439021537227!3d-8.673239590690342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd240f24881c587%3A0xe8413f111e0aa096!2sInstitut%20Teknologi%20Dan%20Bisnis%20STIKOM%20BALI!5e0!3m2!1sid!2sid!4v1659707213799!5m2!1sid!2sid"
-                        width="700" height="475" style="border: 0; border-radius: 30px;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        width="700" height="475" style="border: 0; border-radius: 30px;" allowfullscreen=""
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -302,7 +308,7 @@
             <hr class="text-white" />
             <div class="row mt-3">
                 <div class="col text-center">
-                    <p class="text-white">
+                    <p class="text-white" style="opacity: 0.5;">
                         &copy;Copyright 2022 All Right Reserve | Built by UKM PROGRESS
                     </p>
                 </div>
@@ -319,6 +325,36 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
     <!-- Javascript Bootstrap End    -->
+    <!-- Javascript AOS Start -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+
+        // You can also pass an optional settings object
+        // below listed default settings
+        AOS.init({
+        // Global settings:
+        disable: false, // accepts following values: 'phone', 'tablet', 'mobile', boolean, expression or function
+        startEvent: 'DOMContentLoaded', // name of the event dispatched on the document, that AOS should initialize on
+        initClassName: 'aos-init', // class applied after initialization
+        animatedClassName: 'aos-animate', // class applied on animation
+        useClassNames: false, // if true, will add content of `data-aos` as classes on scroll
+        disableMutationObserver: false, // disables automatic mutations' detections (advanced)
+        debounceDelay: 50, // the delay on debounce used while resizing window (advanced)
+        throttleDelay: 99, // the delay on throttle used while scrolling the page (advanced)
+        
+        // Settings that can be overridden on per-element basis, by `data-aos-*` attributes:
+        offset: 120, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 600, // values from 0 to 3000, with step 50ms
+        easing: 'ease', // default easing for AOS animations
+        once: false, // whether animation should happen only once - while scrolling down
+        mirror: false, // whether elements should animate out while scrolling past them
+        anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+
+        });
+    </script>
+    <!-- Javascript AOS End -->
 </body>
 
 </html>
